2005-1-12  John E. Davis  <davis@space.mit.edu>

	* libsrc/acis_fef.c (normalize_gaussians): turned off acis-fef
	warning message.

2005-1-10  John E. Davis  <davis@space.mit.edu>

        * data/hrc/mcp*,uvis*: Updated HRC-I/S QE and transmission
	files.

	* libsrc/hrc-s.c (_marx_hrc_read_efficiencies): commented out
	section of code that converts to keV since new hrc cal files
	are in keV units

	* libsrc/hrc-i.c (_marx_hrc_i_init): changed "HRC-S" in a
	string to "HRC-I".

2004-12-20  John E. Davis  <davis@space.mit.edu>

	* data/marxcaldb.par: updated caldb files: new letg file and acis-qe.

	* src/marx2fits.c: added more DS keywords.

2004-11-16  John E. Davis  <davis@space.mit.edu>

	* src/marx2fits.c: added DS* keywords to enable GTIs to be
	copied by dmcopy.

2004-11-13  John E. Davis  <davis@space.mit.edu>

	* libsrc/aciscontam.c (_marx_acis_contam_init): new file to
	implement AV's contamination model.

	* libsrc/marx.h (MARX_VERSION_STRING): bumped to d4.2.0

2004-8-26  John E. Davis  <davis@space.mit.edu>

	* libsrc/hrc_s_geom.c (rotate_mcp): new function to rotate the
	MCP instead of the earlier hack which included the effect in
	the dither.  The advantage of rotating it here is the the HRC
	rotation manifests itself in simulations with no dither.

	* src/marx.par: Focal length changed to 10079mm

2004-8-25  John E. Davis  <davis@space.mit.edu>

	* src/marx.par: changed sign of letg dispersion angle

	* data/hrc/hrc_s_geom.txt: change sign of HRC rotation to better match
	observations.

2003-12-15  John E. Davis  <davis@space.mit.edu>

	* libsrc/marx.h (MARX_VERSION_STRING): bumped version to d4.1.0

	* libsrc/diffract.c: added code for reading fine/coarse leg
	geometry from marx.par

	* par/marx.par: added parameters for leg fine/coarse geometry

2003-11-28  John E. Davis  <davis@space.mit.edu>

	* libsrc/marx.h (MARX_VERSION_STRING): bumped to 4.0.10

	* libsrc/acis_fef.c (normalize_gaussians): Avoid CCD regions