@@ -1,3 +1,8 @@
+2005-1-18  John E. Davis  <davis@space.mit.edu>
+
+	* src/marx.c (setup_tstart): Use timegm instead of mktime so
+	that times are expressed in UTC.
+
 2005-1-12  John E. Davis  <davis@space.mit.edu>
 
 	* libsrc/acis_fef.c (normalize_gaussians): turned off acis-fef
